# swift-wasm-runner

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: container-image.yml
src/: main.rs  wapc_functions.rs
