[package]
name = "swift-wasm-runner"
version = "0.1.0"
authors = ["Flavio Castelli <fcastelli@suse.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "0.40.1"
wasmtime-wasi = "0.40.1"
wasi-common = "0.40.1"
anyhow = "1.0.75"
